--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"pretty": true,
 		"allowUnreachableCode": true,
 		"allowUnusedLabels": true,
-		"noImplicitAny": true,
+		"noImplicitAny": false,
 		"noImplicitReturns": false,
 		"noImplicitUseStrict": false,
 		"noFallthroughCasesInSwitch": false,
