--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"graphql-subscriptions": "^0.3.0",
 		"graphql-tools": "^0.10.0",
 		"hapi": "^16.1.0",
+		"mongoose": "^4.8.4",
 		"nodemon": "^1.11.0",
 		"typescript": "^2.2.1"
 	},
 	"devDependencies": {
 		"@types/cookies": "^0.6.0",
 		"@types/graphql": "^0.8.6",
-		"@types/hapi": "^16.0.0"
+		"@types/hapi": "^16.0.0",
+		"@types/mongoose": "^4.7.6"
 	}
 }
