--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
 	"license": "MIT",
 	"scripts": {
 		"build:dev": "sh ./scripts/build.sh",
+		"build:docker": "docker build -t hapi-server .",
 		"dev": "nodemon ./dist/src/index.js",
 		"watch": "tsc --watch",
 		"start": "npm run build:dev && npm run dev",
-		"dev:watch": "concurrently --kill-others -n 'watcher,kiosk' -p '{name}' -c 'gray.dim,cyan' 'npm run watch' 'npm run dev'"
+		"dev:watch": "concurrently --kill-others -n 'watcher,kiosk' -p '{name}' -c 'gray.dim,cyan' 'npm run watch' 'npm run dev'",
+		"dev:docker": "docker run hapi-server"
+
 	},
 	"dependencies": {
 		"concurrently": "^3.3.0",
